# celery-django-test

./: .gitignore  README.md  manage.py  pyproject.toml
celery_django_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: tasks.py
