[tool.poetry]
name = "celery-django-test"
version = "0.1.0"
description = ""
authors = ["garibaldiviolin <garibaldiviolin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
celery = "^5.3.5"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
